--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -11,7 +12,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -25,15 +26,114 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-K8HPVP9
 LastExecutedLaunchName=DESKTOP-K8HPVP9
+
+[MRU]
+MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [EditorStartup]
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+MovingPlatTest_C.Tick=True
+MovingPlatTest_C.Rendering=True
+MovingPlatTest_C.Replication=True
+MovingPlatTest_C.Input=True
+MovingPlatTest_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+MovingPlatTest_C.TransformCommon=True
+SideScrollerCharacter_C.TransformCommon=True
+SideScrollerCharacter_C.Animation=True
+SideScrollerCharacter_C.Mesh=True
+SideScrollerCharacter_C.Physics=True
+SideScrollerCharacter_C.Clothing=True
+SideScrollerCharacter_C.Collision=True
+SideScrollerCharacter_C.ClothingSimulation=True
+SideScrollerCharacter_C.Lighting=True
+SideScrollerCharacter_C.Rendering=True
+SideScrollerCharacter_C.Tags=True
+SideScrollerCharacter_C.Activation=True
+SideScrollerCharacter_C.Cooking=True
+SideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+SideScrollerCharacter_C.Character Movement (General Settings)=True
+SideScrollerCharacter_C.Character Movement: Walking=True
+SideScrollerCharacter_C.Character Movement: Swimming=True
+SideScrollerCharacter_C.Character Movement: Flying=True
+SideScrollerCharacter_C.Character Movement: Custom Movement=True
+SideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+SideScrollerCharacter_C.Character Movement: Physics Interaction=True
+SideScrollerCharacter_C.Character Movement (Networking)=True
+SideScrollerCharacter_C.Character Movement=True
+SideScrollerCharacter_C.Character Movement: Avoidance=True
+SideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+SideScrollerCharacter_C.RootMotion=True
+SideScrollerCharacter_C.NavMovement=True
+SideScrollerCharacter_C.Velocity=True
+SideScrollerCharacter_C.PlanarMovement=True
+SideScrollerCharacter_C.MovementComponent=True
+SideScrollerCharacter_C.Shape=True
+SideScrollerCharacter_C.Navigation=True
+SideScrollerCharacter_C.Character=True
+SideScrollerCharacter_C.Camera=True
+SideScrollerCharacter_C.Pawn=True
+SideScrollerCharacter_C.Input=True
+SideScrollerCharacter_C.Actor=True
+SideScrollerCharacter_C.Materials=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=False
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_VariableGet.DefaultValueCategory=True
+MovingPlatTest_C.Default=True
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[PlacementMode]
+RecentlyPlaced=/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest;
 
 
