Added Spining platform
added a spinning platform where you can chose the axis to rotate on, along with base speed

--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,7 +38,7 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -238,11 +238,24 @@ REINST_SideScrollerCharacter_C_80.Camera=True
 REINST_SideScrollerCharacter_C_80.Pawn=True
 REINST_SideScrollerCharacter_C_80.Input=True
 REINST_SideScrollerCharacter_C_80.Actor=True
+SpinningPlatform_C.Tick=True
+SpinningPlatform_C.Rendering=True
+SpinningPlatform_C.Replication=True
+SpinningPlatform_C.Input=True
+SpinningPlatform_C.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+SpinningPlatform_C.TransformCommon=True
+SpinningPlatform_C.Default=True
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform;
 RecentlyPlaced=/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest;
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -301,13 +314,15 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [AssetEditorToolkitTabLocation]
 /Game/GameJam/Jay/MovingPlatTest.MovingPlatTest=1
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -868,5 +883,7 @@ BlueprintProfiler.TimeStamp=2020.12.26-14.14.55
 BlueprintProfiler.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2020.12.26-14.14.55
 BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2020.12.26-14.15.00
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 
