--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,6 +29,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-K8HPVP9
 LastExecutedLaunchName=DESKTOP-K8HPVP9
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [MRU]
 MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
@@ -37,8 +38,8 @@ MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform
+CleanShutdown=False
+OpenAssetsAtExit=/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -250,6 +251,320 @@ BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
 SpinningPlatform_C.TransformCommon=True
 SpinningPlatform_C.Default=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Audio=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.RichCurveEditor=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.Performance=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.Import=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+SuperSearchSettings.General=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.Sequencer=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Options=True
+PersonaOptions.Skeleton Tree=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+EditorLiveStreamingSettings.EditorLiveStreaming=True
+LogVisualizerSettings.VisualLogger=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+NiagaraSettings.Niagara=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.PhysicalSurfaces=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.VirtualKeyboard=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.IO=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.ShowHideWidgetClasses=True
+AndroidRuntimeSettings.APKPackaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.AdvancedAPKPackaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.DataCooker=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+LevelSequenceEditorSettings.Tracks=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+Engine.LevelStreaming=True
+AndroidRuntimeSettings.AdvancedBuild=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -319,6 +634,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [AssetEditorToolkitTabLocation]
 /Game/GameJam/Jay/MovingPlatTest.MovingPlatTest=1
+/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform=1
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
@@ -885,5 +1201,13 @@ BlueprintGraph.TimeStamp=2020.12.26-14.14.55
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.12.26-14.15.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[DetailPropertyExpansion]
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+Object=
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
