added mouse cusor

--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,6 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-K8HPVP9
 LastExecutedLaunchName=DESKTOP-K8HPVP9
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [MRU]
 MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
@@ -38,8 +37,7 @@ MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -565,6 +563,10 @@ BP_Sky_Sphere_C.Actor=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
+SideScrollerCharacter_C.Variable=True
+SideScrollerCharacter_C.Sockets=True
+SideScrollerCharacter_C.ComponentReplication=True
+SideScrollerCharacter_C.Events=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -635,10 +637,11 @@ AssetPropertyPicker.CurrentViewType=0
 [AssetEditorToolkitTabLocation]
 /Game/GameJam/Jay/MovingPlatTest.MovingPlatTest=1
 /Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform=1
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
-WindowSize=X=1310.000 Y=750.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
