Added click to slow

--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,6 +38,9 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/3.3
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -567,6 +570,27 @@ SideScrollerCharacter_C.Variable=True
 SideScrollerCharacter_C.Sockets=True
 SideScrollerCharacter_C.ComponentReplication=True
 SideScrollerCharacter_C.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -641,7 +665,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
-WindowSize=X=1320.000 Y=760.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1204,6 +1228,8 @@ BlueprintGraph.TimeStamp=2020.12.26-14.14.55
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.12.26-14.15.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2020.12.26-14.15.02
+MaterialEditor.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1212,5 +1238,13 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499968 R=0.000000
+PrimType=1
 
 
