Parent Framework added.

--- a/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PausingBad/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,10 +37,9 @@ MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/3.3
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SlowDownItems/ActorParent.ActorParent
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -591,11 +590,27 @@ MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+ActorParent_C.Tick=True
+ActorParent_C.Rendering=True
+ActorParent_C.Replication=True
+ActorParent_C.Input=True
+ActorParent_C.Actor=True
+ObjectProperty.DefaultValueCategory=True
+Platform1_C.Tick=True
+Platform1_C.Default=True
+Platform1_C.Parent=True
+Platform1_C.Rendering=True
+Platform1_C.Replication=True
+Platform1_C.Input=True
+Platform1_C.Actor=True
+Platform1_C.TransformCommon=True
+K2Node_SwitchInteger.PinOptions=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SlowDownItems/Platform1.Platform1;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform;
 RecentlyPlaced=/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest;
 
@@ -659,9 +674,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [AssetEditorToolkitTabLocation]
-/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest=1
+/Game/GameJam/Jay/MovingPlatTest.MovingPlatTest=0
 /Game/SideScrollerBP/Blueprints/SpinningPlatform.SpinningPlatform=1
 /Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
+/Game/SideScrollerBP/Blueprints/SlowDownItems/Platform1.Platform1=0
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
